[gd_scene load_steps=3 format=3 uid="uid://bpobpaan3tquv"]

[ext_resource type="Script" path="res://scenes/house/house.gd" id="1_suicg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n3yrr"]
bg_color = Color(0.32549, 1, 0.290196, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="House" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_suicg")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Background"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = " 집 화면"

[node name="M" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="V" type="VBoxContainer" parent="M"]
layout_mode = 2

[node name="menus" type="MarginContainer" parent="M/V"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="V" type="GridContainer" parent="M/V/menus"]
custom_minimum_size = Vector2(500, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 8
columns = 5

[node name="FarmButton" type="Button" parent="M/V/menus/V"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
text = "밭으로"

[node name="VillageButton" type="Button" parent="M/V/menus/V"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
text = "  마을로  "

[node name="RecipeButton" type="Button" parent="M/V/menus/V"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
text = "  레시피북  "

[node name="InventoryButton" type="Button" parent="M/V/menus/V"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
text = "  인벤토리  "

[node name="RefreshButton" type="Button" parent="M/V/menus/V"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
text = "  새로고침  "

[node name="M" type="MarginContainer" parent="M/V/menus"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 250

[node name="CookButton" type="Button" parent="M/V/menus/M"]
custom_minimum_size = Vector2(380, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_n3yrr")
text = "+ 음식 조리하기"

[node name="sub_scene" type="MarginContainer" parent="M/V"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="M/V/sub_scene"]
layout_mode = 2

[node name="Popups" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ConfirmPopup" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 600.0
offset_top = 300.0
offset_right = 640.0
offset_bottom = 340.0

[connection signal="button_down" from="M/V/menus/V/FarmButton" to="." method="_on_farm_button_down"]
[connection signal="button_down" from="M/V/menus/V/VillageButton" to="." method="_on_village_button_down"]
[connection signal="button_down" from="M/V/menus/V/RecipeButton" to="." method="_on_recipe_button_down"]
[connection signal="button_down" from="M/V/menus/V/InventoryButton" to="." method="_on_inventory_button_down"]
[connection signal="button_down" from="M/V/menus/V/RefreshButton" to="." method="_on_refresh_button_down"]
[connection signal="button_down" from="M/V/menus/M/CookButton" to="." method="_on_cook_button_down"]
